[package]
name = "simple-xlsx"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
umya-spreadsheet = { version = "2.2.3", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
