[package]
name = "simple-xlsx-writer"
version = "0.1.5"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kettei-sproutty/simple-xlsx-writer"
description = "Simple xlsx writer"
homepage = "https://kettei-sproutty.github.io/simple-xlsx-writer"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
umya-spreadsheet = { version = "2.2.3", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", default-features = false, features = ["Blob", "BlobPropertyBag", "Url", "Window", "Document", "Element", "HtmlElement"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
